--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SimpleCrmFrontend</title>
+  <title>WishyFrontend</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" type="text/css" href="styles.css">-->
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+
+<script src="assets/js/jquery-3.2.1.min.js"></script>
+<script src="assets/js/bootstrap.js"></script>
 </body>
 </html>
